# clinisift

./: LICENSE  README.org  documentation.org  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/clinisift/: cliniparse.py  doc.py  utils.py  visualize.py
