[metadata]
# replace with your username:
name = clinisift-samrawal
version = 0.0.2
author = Sam Rawal
author_email = samrawal@gmail.com 
description = A multitool for quickly parsing, analyzing, and visualizing medical records
long_description = file: README.org
long_description_content_type = text/markdown
url = https://github.com/clinisift/clinisift
project_urls =
    Bug Tracker = https://github.com/clinisift/clinisift/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
